traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:13: error: not found: value &&
  if (getX() == getMondeHauteur()) && (getY() == getMondeLargeur()) {
                                   ^